# miniROS-rs

./: .cursorrules  .gitignore  Cargo.toml  PYTHON_USAGE.md  README.md  pyproject.toml
.cursor/rules/: async-patterns.mdc  cli-tools.mdc  core-philosophy.mdc  documentation.mdc  error-handling.mdc  message-system.mdc  performance.mdc  python-bindings.mdc  ros2-compatibility.mdc  testing.mdc  transport-layer.mdc  visualization.mdc
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: README.md  book.toml  turtlebot_control_system.md  turtlebot_controller.md  usage_guide.md
docs/src/: SUMMARY.md  api.md  cicd.md  cli-guide.md  concepts.md  dds-transport.md  documentation-overview.md  examples.md  introduction.md  package-examples.md  performance.md  python-bindings.md  quick-start.md  scripts-guide.md  transport-architecture.md  visualization.md
docs/src/advanced/: custom-messages.md
docs/src/api/: transport.md  visualization.md
docs/src/communication/: zenoh.md
docs/src/core-concepts/: pubsub.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/visualization/: data-types.md  examples.md  rerun.md
examples/: 01_basic_pubsub.rs  02_custom_messages.rs  03_services.rs  04_actions_parameters.rs  04_visualization_basic.rs  05_zenoh_transport.rs  06_visualization_advanced.rs  07_integrated_system.rs  08_performance_benchmarks.rs  09_visualization_demo.rs  10_cross_language_types.rs  11_minimal_benchmarks.rs  12_turtlebot_controller.rs  13_turtlebot_teleop.rs  14_turtlebot_simulator.rs  15_complete_demo.rs  16_message_packages_demo.rs  17_new_message_types_demo.rs  18_ros2_bridge_demo.rs  19_plugin_system_demo.rs  basic_test.rs  integrated_demo.rs  simple_pub_sub.rs  visualization_demo.rs  zenoh_communication.rs
examples_broken/: 01_basic_pubsub.rs  10_cross_language_types.rs  12_turtlebot_controller.rs
python/: Makefile  README.md  install_examples.py  pyproject.toml
python/examples/: README.md  benchmark_demo.py  comprehensive_demo.py  demo_all.py  image_publisher.py  image_subscriber.py  listener.py  minimal_publisher.py  minimal_subscriber.py  minimal_visualization.py  minimal_visualization_demo.py  multi_subscriber.py  number_publisher.py  robot_visualization.py  ros2_message_demo.py  simple_param.py  simple_pubsub.py  simple_test.py  talker.py  turtlebot_controller.py  type_system_demo.py
python/mini_ros/: __init__.py  cli.py
python/tests/: conftest.py  test_basic_functionality.py  test_examples.py
scripts/: build-python.sh  mini_ros_wrapper.sh  publish-release.sh  setup-release.sh  setup.sh  sync-version.sh  update-version.sh
src/: action.rs  benchmarks.rs  core.rs  dds_transport.rs  discovery.rs  error.rs  launch.rs  lib.rs  message.rs  node.rs  packages.rs  parameter.rs  publisher.rs  python.rs  service.rs  subscriber.rs  transport.rs  types.rs  visualization.rs  zenoh_transport.rs
src/communication/: action.rs  mod.rs  publisher.rs  service.rs  subscriber.rs
src/core/: context.rs  error.rs  message.rs  mod.rs  node.rs
src/features/: benchmarks.rs  mod.rs  python.rs  visualization.rs
src/system/: discovery.rs  launch.rs  mod.rs  packages.rs  parameter.rs  plugin.rs  ros2_bridge.rs
src/transport/: dds_transport.rs  mod.rs  tcp.rs  zenoh_transport.rs
