[package]
name = "mini-ros"
version = "0.1.4"
edition = "2024"
authors = ["Chenyu Cao <ruziniuuuuu@gmail.com>"]
description = "A high-performance, cross-platform ROS2-like middleware implementation"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/ruziniuuuuu/miniROS-rs"
repository = "https://github.com/ruziniuuuuu/miniROS-rs"

[lib]
name = "mini_ros"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
dashmap = "5.0"
crossbeam-channel = "0.5"
bincode = "1.3"
parking_lot = "0.12"
futures = "0.3"
# DDS support for ROS2 compatibility - using our own implementation
# No external DDS crate needed - we implement simplified DDS ourselves
# Fallback to simplified DDS-like transport
fastrand = "2.0"
rerun = { version = "0.20", features = ["native_viewer"], optional = true }

# Python bindings (optional)
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"], optional = true }

# Image processing for Python examples
image = { version = "0.24", optional = true }

# Additional dependencies for new features
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }

# Platform-specific dependencies for terminal control
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["tcp-transport", "visualization"]
python = ["pyo3", "pyo3-asyncio", "image"]
visualization = ["rerun"]
dds-transport = []  # Our own DDS implementation
tcp-transport = []  # Fallback transport

# Learning Examples (Sequential)
[[example]]
name = "01_basic_pubsub"
path = "examples/01_basic_pubsub.rs"

[[example]]
name = "02_custom_messages"
path = "examples/02_custom_messages.rs"

[[example]]
name = "03_services"
path = "examples/03_services.rs"

[[example]]
name = "04_actions_parameters"
path = "examples/04_actions_parameters.rs"

[[example]]
name = "04_visualization_basic"
path = "examples/04_visualization_basic.rs"

[[example]]
name = "05_zenoh_transport"
path = "examples/05_zenoh_transport.rs"

[[example]]
name = "06_visualization_advanced"
path = "examples/06_visualization_advanced.rs"

[[example]]
name = "07_integrated_system"
path = "examples/07_integrated_system.rs"

[[example]]
name = "08_performance_benchmarks"
path = "examples/08_performance_benchmarks.rs"

[[example]]
name = "09_visualization_demo"
path = "examples/09_visualization_demo.rs"

[[example]]
name = "10_cross_language_types"
path = "examples/10_cross_language_types.rs"

[[example]]
name = "11_minimal_benchmarks"
path = "examples/11_minimal_benchmarks.rs"

[[example]]
name = "12_turtlebot_controller"
path = "examples/12_turtlebot_controller.rs"

[[example]]
name = "13_turtlebot_teleop"
path = "examples/13_turtlebot_teleop.rs"

[[example]]
name = "14_turtlebot_simulator"
path = "examples/14_turtlebot_simulator.rs"

[[example]]
name = "15_complete_demo"
path = "examples/15_complete_demo.rs"

# Binary executables
[[bin]]
name = "mini_ros"
path = "src/bin/mini_ros.rs"
